# timer-cli

./: QWEN.md  focus_tracker.db  pyproject.toml  test_notification.py
app/: main.py
app/database/: db.py
app/models/: task.py
app/repositories/: focus_session.py  task.py
app/utils/: notification.py  notification_window.py  period_map.py  timer.py
app/views/: view.py
