[project]
name = "timer-cli"
version = "0.1.0"
description = "A beautiful CLI timer application for time management and focus tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.45",
    "rich>=13.0.0",
]

[project.scripts]
timer-cli = "app.main:main"
